chore: fix javadoc and minor java syntax